--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>NumeroWeb</title>
@@ -9,8 +10,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <meta property="og:title" content="Site Title" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image:url" content="src/assets/images/cats.jpg" />
+  <meta property="og:description" content="Site description" />
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
