--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-  <meta property="og:title" content="Site Title" />
+  
+  <meta property="og:title" content="A Numerology App for Dummies" />
   <meta property="og:type" content="website" />
-  <meta property="og:image:url" content="src/assets/images/cats.jpg" />
+  <meta property="og:url" content="https://dummy-numerology.herokuapp.com/" />
+  <meta property="og:image:url" content="https://dummy-numerology.herokuapp.com/assets/images/cats.jpg" />
   <meta property="og:description" content="Site description" />
 </head>
 
