--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,7 @@
   
   <meta property="og:title" content="A Numerology App for Dummies" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://dummy-numerology.herokuapp.com/" />
-  <meta property="og:image:url" content="https://dummy-numerology.herokuapp.com/assets/images/cats.jpg" />
+  <meta property="og:image:url" content="assets/images/cats.jpg" />
   <meta property="og:description" content="Site description" />
 </head>
 
