--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>NumeroWeb</title>
+  <title>Dummy Numerology</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,7 +13,8 @@
   
   <meta property="og:title" content="A Numerology App for Dummies" />
   <meta property="og:type" content="website" />
-  <meta property="og:image:url" content="assets/images/cats.jpg" />
+  <meta property="og:image:url" content="assets/images/cat2.jpg" />
+  <meta property="og:image" content="assets/images/cat2.jpg" />
   <meta property="og:description" content="Site description" />
 </head>
 
