--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="A Numerology App for Dummies" />
   <meta property="og:type" content="website" />
   <meta property="og:image:url" content="assets/images/cat2.jpg" />
-  <meta property="og:image" content="assets/images/cat2.jpg" />
+  <!-- <meta property="og:image" content="assets/images/cat2.jpg" /> -->
   <meta property="og:description" content="Site description" />
 </head>
 
